[package]

name = "tempdir"
version = "0.2.1"
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Temporary directory utilities."
repository = "https://github.com/danburkert/tempdir.git"
documentation = "http://rust-ci.org/danburkert/tempdir/doc/tempdir/"
keywords = ["io", "library", "testing", "filesystem"]

[dependencies]
rand = "*"
